# Spokn

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/windows-test-app/: README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/windows-test-app/public/: audio-processor.js  overlay.html
apps/windows-test-app/scripts/: build-backend.mjs  generate-icon.mjs  package-whisper-macos.mjs
apps/windows-test-app/src/: App.tsx  index.css
apps/windows-test-app/src-node/: pipeline.ts  server.ts
apps/windows-test-app/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/windows-test-app/src-tauri/capabilities/: default.json
apps/windows-test-app/src-tauri/resources/: README.md
apps/windows-test-app/src-tauri/src/: lib.rs
apps/windows-test-app/src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
apps/windows-test-app/src/components/: AudioInput.tsx  DebugPanel.tsx  Icons.tsx  LanguagePicker.tsx  LeftPanel.tsx  LogsPanel.tsx  ModelManager.tsx  Onboarding.tsx  PlatformStatus.tsx  SettingsPanel.tsx  SignatureLine.tsx  SpoknMark.tsx  TranscriptView.tsx  Waveform.tsx  Workspace.tsx
apps/windows-test-app/src/hooks/: useAccessibilityPermission.ts  useFlowMode.ts  useLogs.ts  useMicDevices.ts  useRecording.ts  useTranscription.ts  useTypingGuardStatus.ts
apps/windows-test-app/src/lib/: api.ts  flowAutoContext.ts  flowCommandParser.ts  flowConstants.ts  flowCursorAwareness.ts  flowExternalEditCapture.ts  flowInjectionQueue.ts  flowObservability.ts  flowSelfRepair.ts  flowSendMap.ts  flowSessionBuffer.ts  flowTextAssembly.ts  flowToneMapping.ts  flowTypingGuard.ts  flowValidation.ts  languages.ts  learnedVocab.ts  modelRecommender.ts  snippets.ts  types.ts  wavEncode.ts
apps/windows-test-app/src/lib/__tests__/: flowExternalEditCapture.test.ts  flowInjectionQueue.permission.test.ts  flowTypingGuard.test.ts  flowValidation.test.ts  typingGuardProbe.test.ts
apps/windows-test-app/src/overlay/: index.html
docs/: spokn-infra.md
