[package]
name = "windows-test-app"
version = "0.1.0"
description = "Spokn — offline speech-to-text for Windows"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
arboard = "3"
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
