[package]
name = "windows-test-app"
version = "0.1.0"
description = "Spokn — offline speech-to-text for Windows"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` unlocks WebviewWindowBuilder::transparent() on macOS
# (feature-gated there in tauri 2). Overlay window needs transparency on
# both platforms; Windows is unaffected by this flag.
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
arboard = "3"
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
] }
# Read-only UI Automation for capturing external edits. Pure Windows COM
# wrapper — no additional runtime. Used only by read_focused_text.
uiautomation = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS native bridges. Unused by Stage 1 stubs; wired in by later stages:
#   - Stage 6 (active window): objc2-app-kit (NSWorkspace, NSRunningApplication),
#     core-foundation (CFString), plus AX via core-graphics/objc2 bindings.
#   - Stage 7 (typing guard):  core-graphics (CGEventTap, CGEventMask) +
#     core-foundation (CFRunLoop).
#   - Stage 8 (focused text):  AX via objc2 + core-foundation.
#
# Pinned to minor versions known-good as of 2026-04; revisit when bumping.
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.5"
# objc2-app-kit 0.2 feature-gates every class. We need NSWorkspace +
# NSRunningApplication for the frontmost-app read; they pull in the
# required NSString / NSURL / NSArray objc2-foundation features transitively.
# `libc` is required to expose NSRunningApplication.processIdentifier() → pid_t.
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "libc"] }
objc2-foundation = "0.2"
